# oop-2020-21

./: README.md
cs-1-exercis/ex1/: functions-5.cpp  helpers.cpp  readme.md  test.cpp
cs-1-exercis/ex2/: FibonacciCalculator.h  readme.md
cs-1-exercis/ex4/: FibonacciCalculator.cpp  PolynomMain.cpp  fib.cpp  polynom.cpp
cs-1-exercis/ex5/: Game of Life - annotated rules.docx  gol.cpp  readme.md
cs-1-exercis/ex6/: greeter-tests.cpp  greeter.cpp
cs-1-exercis/ex7/: gol.cpp  readme.md
cs-1-exercise/: .gitignore  readme.md
cs-1-exercise/ex1/: firstclass.cpp  functions-10.cpp  helpers.h
cs-2-exercise/: README.md
cs-2-practical/: README.md
cs-2-practical/07-tests-move/UNO/: CMakeLists.txt  main.cpp
cs-2-practical/07-tests-move/UNO/Catch/: catch2.cpp  catch2.h
cs-2-practical/07-tests-move/UNO/Header Files/: Card.h  Deck.h  Game.h  Player.h
cs-2-practical/07-tests-move/UNO/Source Files/: Card.cpp  Deck.cpp  Game.cpp  Player.cpp
cs-2-practical/07-tests-move/UNO/Tests/: main.cpp
cs-2-practical/08-Animals/: CMakeLists.txt  README.md  main.cpp
cs-2-practical/08-Animals/Headers/: AnimalFamily.h  Fauna.h  Planet.h  Zoo.h
cs-2-practical/08-Animals/Sources/: AnimalFamily.cpp  Fauna.cpp  Planet.cpp  Zoo.cpp
cs-2-practical/08-Animals/Tests/: main.cpp
cs-2-practical/14-virtual-destructors-and-exercise/Furniture/: CMakeLists.txt  main.cpp
cs-2-practical/14-virtual-destructors-and-exercise/Furniture/Headers/: Bed.h  Chair.h  Furniture.h  MyVector.h  Repository.h  Table.h
cs-2-practical/14-virtual-destructors-and-exercise/Furniture/Sources/: Bed.cpp  Chair.cpp  Furniture.cpp  Repository.cpp  Table.cpp
cs-4-exercise/: README.md
cs-4-practical/: README.md
inf-2-exercise/: README.md
inf-2-practical/: README.md
inf-6-exercise/: README.md
templates/: exam.cpp  k-prakt.cpp  k1.cpp  k2.cpp
(+988 files in other folders)
